<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000033" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="#000">

        <TextView
            android:id="@+id/addStudentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:text="@string/show_stats"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="20sp" 
             android:textColor="#FFF"
             android:background="#336699"
             android:layout_marginTop="10dp"/>

    </TableRow>

   
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/examTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/padding_5dp"
            android:text="@string/exam_num"
            android:textColor="#FFF"
            android:textSize="30sp" />

    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numStudentsText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/num_students" />

         <TextView
            android:id="@+id/numStudentsText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/num_students" />

     </TableRow>
     
      <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/minGradeT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/min_grade" />

         <TextView
            android:id="@+id/minGradeT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/min_grade" />

     </TableRow>
     
      
       <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/maxGradeT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/max_grade" />

         <TextView
            android:id="@+id/maxGradeT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/max_grade" />

     </TableRow>
     
       
        <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/avg_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/avg_grade" />

         <TextView
            android:id="@+id/avg_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/avg_grade" />

     </TableRow>
     
        
         <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/stdvText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/st_dv" />

         <TextView
            android:id="@+id/stdvText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/st_dv" />

     </TableRow>
     
         <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:textColor="#FFF">
        </ListView>
    </TableRow>

</TableLayout>
