<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000033"  >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/gradesTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="2"
            android:text="@string/show_student"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="23sp" />

        <Button
            android:id="@+id/gradeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/grade_button"
            android:textColor="#FFF"
          android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#336699"
            android:textSize="20sp" />

        <Button
            android:id="@+id/editButton"
            style="?android:attr/buttonStyleSmall"
           android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/edit_button"
             android:layout_marginTop="10dp"
            android:textSize="20sp" 
             android:background="#336699"
             android:textColor="#FFF"/>

    </TableRow>

    <TableRow
        android:id="@+id/showStudentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nameStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:textSize="25sp"
        	android:textColor="#FFF"
        	android:layout_weight="4"
             >

          
        </TextView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/OKButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
   android:textColor="#FFF"
    android:background="#336699"
            android:text="@string/ok_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/DeleteButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="#FFF"
             android:background="#336699"
            android:text="@string/delete_button"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="#000033" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>
    </TableRow>



</TableLayout>
