<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000033" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="#000">

        <TextView
            android:id="@+id/addContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/edit_grade"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF" 
       >

    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gradeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/grade_name" />

        
        <TextView
            android:id="@+id/gradeNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
             />
        

    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gradeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/grade" />

        <EditText
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/grade"
            android:inputType="numberDecimal"
            android:padding="@dimen/padding_5dp" 
            android:textColor="#FFF">

            <requestFocus />
        </EditText>

    </TableRow>
    
    

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/saveGradeEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:textColor="#FFF"
                android:background="#336699"
                 android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/deleteGrade"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                android:textColor="#FFF"
                android:background="#336699"
                 android:layout_weight="1" />


        </TableRow>

</TableLayout>
