<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:background="#000033"
     >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/gradesTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/Tittle_name_Stu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/add_button_student"
            android:background="#336699"
            android:text="@string/add_button"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_bar_students"
            android:textColorHint="#FFFFFF" 
            android:textColor="#FFFFFF">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF" >
        </ListView>
    </TableRow>

   

</TableLayout>