<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="#000033">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="#000">

        <TextView
            android:id="@+id/addStudentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/add_student"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="#FFF"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:padding="@dimen/padding_5dp" >

            <requestFocus />
        </EditText>

    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:padding="@dimen/padding_5dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textColor="#FFF"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_5dp" >

            <requestFocus />
        </EditText>

    </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/saveStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
               android:textColor="#FFF" 
               android:background="#336699"
                 android:layout_weight="1" />

        </TableRow>

</TableLayout>
